ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
04/07/09 Remi Ricard (papaDoc)
        * Fix bug in collision categories in demo_jointPU, reported by Tilmann

03/14/09 Oleh Derevenko
        * A possibility to initialize/close ODE multiple times recursively has 
          been added.
          Also, now a call to dSpaceSetManualCleanup() is required for each 
          space right after creation if ODE has been initialized in thread data
          manual cleanup mode.
           
03/07/09 Oleh Derevenko
        * Thread local data has been cleaned up from OPCODE and OdeTls as it is
          not used (OPC_SweepAndPrune.* and OPC_BoxPruning.* have been removed
          - rebuilding project files is necessary).

02/07/09 Daniel K. O.
        * New house of cards demo, which stresses the friction handling stability.

01/29/09 Remi Ricard (papaDoc)
        * Fix bug: Fix problem when attaching no body to a joint. Before calling
          setRelativeValues a check is made for bodies.
        * Add unittest

01/28/09 Daniel K. O.
        * Applied patch #2538046: Heightfield AABB bounds patch.

01/23/09 Remi Ricard (papaDoc)
         * Add new function dJointSetUniversalAxis1Offset and dJointSetUniversalAxis2Offset
         * Add unittest for those funcitons.

01/23/09 Remi Ricard (papaDoc)
         * Fix problem with dJointGetUniversalAngle2 when the joint is attached to
           only a body 2. The sign was inverted.
         * Add unit test to verify for this problem

01/21/09 Remi Ricard (papaDoc)
         * Fix bug reported by Tilman: dxJointPU::getInfo1 was setting twice the
           limit of limot1 to zero and not limot2

01/17/09 Daniel K. O.